Changes for 2.1.2

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.1.1

New features:
A.F.....S. [ZBXNEXT-1689] decreased number of operations with table "items" (Pavels, wiper)
A......... [ZBXNEXT-1689] dropped support of the prevorgvalue property in the item API (Pavels)
A......... [ZBXNEXT-1689] removed the with_historical_items parameter from host.get and hostgroup.get (Pavels)
..F....... [ZBXNEXT-1689] item last value information will no longer be available if history storage period is set to 0 (Pavels)
..F....... [ZBXNEXT-1689] item last check dates will no longer be displayed for unsupported items (Pavels)

Bug fixes:
..F....... [ZBX-6803] fixed screens data in "Template OS OpenBSD" template (Guntis)
...G...... [ZBX-5616] improved system.hostname request mechanism and added system.sw.arch item support for NetBSD, OpenBSD, Mac OS X, AIX, HP-UX, Solaris, Tru64, FreeBSD and Windows platforms
..F....... [ZBX-6663] fixed checkbox "Select all" in lists when all checkboxes are selected (Ivo)
..F....... [ZBX-6777] fixed usage of cursor pointer (Guntis)
....I..... [ZBX-6637] added -m64 compilation flag for Solaris to be able to understand all attributes of 64-bit processes (igors)
..F....... [ZBX-6800] added required javascripts for showing hintbox in Zabbix setup (Guntis)
..F....... [ZBX-6796] added check in UI pre-requisites check, is memory_limit set to unlimited. (Guntis)
..F....... [ZBX-6776] added sorting by icon names in Map element configuration form (Guntis)
A......... [ZBX-6771] fixed "status" field and existing host validation in Proxy API (Ivo)
..F....... [ZBX-6732] cookie path is now automatically set from current URL (Ivo)
..F....... [ZBX-6706] improved node displaying in frontend (Eduard)

--------------------------------------------------------------------------------
Changes for 2.1.0

New features:
........S. [ZBXNEXT-322] implemented value cache (wiper)